// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI: index render stateless component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CLI
    addApp={true}
    closeWalkThroughOverlay={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-dialog-body"
        >
          <div
            className="pt-form-group"
          >
            <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Run 
                    <code>
                      strato init
                    </code>
                     to upload a sample app to the STRATO blockchain
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>,
        <div
          className="pt-dialog-footer"
        >
          <div
            className="pt-dialog-footer-actions button-center"
          >
            <div>
              <Blueprint.AnchorButton
                className="read-docs-btn"
                href="https://developers.blockapps.net/advanced/launch-dapp/"
                intent={0}
                onClick={[Function]}
                target="_blank"
                text="Upload an App"
              />
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-form-group"
          >
            <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Run 
                    <code>
                      strato init
                    </code>
                     to upload a sample app to the STRATO blockchain
                  </li>
                </ol>
              </div>
            </div>
          </div>,
          "className": "pt-dialog-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Run 
                    <code>
                      strato init
                    </code>
                     to upload a sample app to the STRATO blockchain
                  </li>
                </ol>
              </div>
            </div>,
            "className": "pt-form-group",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  Download the STRATO CLI to deploy apps from the command line
                </h4>,
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Run 
                      <code>
                        strato init
                      </code>
                       to upload a sample app to the STRATO blockchain
                    </li>
                  </ol>
                </div>,
              ],
              "className": "pt-form-content cli-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Download the STRATO CLI to deploy apps from the command line",
                },
                "ref": null,
                "rendered": "Download the STRATO CLI to deploy apps from the command line",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <p>
                      Pre-requisites:
                      <br />
                      Node JS (Version 6 and up)
                    </p>,
                    <ol>
                      <li>
                        Once you have Node JS installed, run 
                        <code>
                          npm install -g strato-cli
                        </code>
                      </li>
                      <li>
                        Run 
                        <code>
                          strato init
                        </code>
                         to upload a sample app to the STRATO blockchain
                      </li>
                    </ol>,
                  ],
                  "className": "cli-content",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Pre-requisites:",
                        <br />,
                        "Node JS (Version 6 and up)",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "Pre-requisites:",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {},
                        "ref": null,
                        "rendered": null,
                        "type": "br",
                      },
                      "Node JS (Version 6 and up)",
                    ],
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <li>
                          Once you have Node JS installed, run 
                          <code>
                            npm install -g strato-cli
                          </code>
                        </li>,
                        <li>
                          Run 
                          <code>
                            strato init
                          </code>
                           to upload a sample app to the STRATO blockchain
                        </li>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "Once you have Node JS installed, run ",
                            <code>
                              npm install -g strato-cli
                            </code>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "Once you have Node JS installed, run ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "npm install -g strato-cli",
                            },
                            "ref": null,
                            "rendered": "npm install -g strato-cli",
                            "type": "code",
                          },
                        ],
                        "type": "li",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "Run ",
                            <code>
                              strato init
                            </code>,
                            " to upload a sample app to the STRATO blockchain",
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "Run ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "strato init",
                            },
                            "ref": null,
                            "rendered": "strato init",
                            "type": "code",
                          },
                          " to upload a sample app to the STRATO blockchain",
                        ],
                        "type": "li",
                      },
                    ],
                    "type": "ol",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-dialog-footer-actions button-center"
          >
            <div>
              <Blueprint.AnchorButton
                className="read-docs-btn"
                href="https://developers.blockapps.net/advanced/launch-dapp/"
                intent={0}
                onClick={[Function]}
                target="_blank"
                text="Upload an App"
              />
            </div>
          </div>,
          "className": "pt-dialog-footer",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <Blueprint.AnchorButton
                className="read-docs-btn"
                href="https://developers.blockapps.net/advanced/launch-dapp/"
                intent={0}
                onClick={[Function]}
                target="_blank"
                text="Upload an App"
              />
            </div>,
            "className": "pt-dialog-footer-actions button-center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Blueprint.AnchorButton
                className="read-docs-btn"
                href="https://developers.blockapps.net/advanced/launch-dapp/"
                intent={0}
                onClick={[Function]}
                target="_blank"
                text="Upload an App"
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "className": "read-docs-btn",
                "href": "https://developers.blockapps.net/advanced/launch-dapp/",
                "intent": 0,
                "onClick": [Function],
                "target": "_blank",
                "text": "Upload an App",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-dialog-body"
          >
            <div
              className="pt-form-group"
            >
              <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Run 
                      <code>
                        strato init
                      </code>
                       to upload a sample app to the STRATO blockchain
                    </li>
                  </ol>
                </div>
              </div>
            </div>
          </div>,
          <div
            className="pt-dialog-footer"
          >
            <div
              className="pt-dialog-footer-actions button-center"
            >
              <div>
                <Blueprint.AnchorButton
                  className="read-docs-btn"
                  href="https://developers.blockapps.net/advanced/launch-dapp/"
                  intent={0}
                  onClick={[Function]}
                  target="_blank"
                  text="Upload an App"
                />
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-group"
            >
              <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Run 
                      <code>
                        strato init
                      </code>
                       to upload a sample app to the STRATO blockchain
                    </li>
                  </ol>
                </div>
              </div>
            </div>,
            "className": "pt-dialog-body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Run 
                      <code>
                        strato init
                      </code>
                       to upload a sample app to the STRATO blockchain
                    </li>
                  </ol>
                </div>
              </div>,
              "className": "pt-form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Download the STRATO CLI to deploy apps from the command line
                  </h4>,
                  <div
                    className="cli-content"
                  >
                    <p>
                      Pre-requisites:
                      <br />
                      Node JS (Version 6 and up)
                    </p>
                    <ol>
                      <li>
                        Once you have Node JS installed, run 
                        <code>
                          npm install -g strato-cli
                        </code>
                      </li>
                      <li>
                        Run 
                        <code>
                          strato init
                        </code>
                         to upload a sample app to the STRATO blockchain
                      </li>
                    </ol>
                  </div>,
                ],
                "className": "pt-form-content cli-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Download the STRATO CLI to deploy apps from the command line",
                  },
                  "ref": null,
                  "rendered": "Download the STRATO CLI to deploy apps from the command line",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <p>
                        Pre-requisites:
                        <br />
                        Node JS (Version 6 and up)
                      </p>,
                      <ol>
                        <li>
                          Once you have Node JS installed, run 
                          <code>
                            npm install -g strato-cli
                          </code>
                        </li>
                        <li>
                          Run 
                          <code>
                            strato init
                          </code>
                           to upload a sample app to the STRATO blockchain
                        </li>
                      </ol>,
                    ],
                    "className": "cli-content",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "Pre-requisites:",
                          <br />,
                          "Node JS (Version 6 and up)",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "Pre-requisites:",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {},
                          "ref": null,
                          "rendered": null,
                          "type": "br",
                        },
                        "Node JS (Version 6 and up)",
                      ],
                      "type": "p",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <li>
                            Once you have Node JS installed, run 
                            <code>
                              npm install -g strato-cli
                            </code>
                          </li>,
                          <li>
                            Run 
                            <code>
                              strato init
                            </code>
                             to upload a sample app to the STRATO blockchain
                          </li>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Once you have Node JS installed, run ",
                              <code>
                                npm install -g strato-cli
                              </code>,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "Once you have Node JS installed, run ",
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "npm install -g strato-cli",
                              },
                              "ref": null,
                              "rendered": "npm install -g strato-cli",
                              "type": "code",
                            },
                          ],
                          "type": "li",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Run ",
                              <code>
                                strato init
                              </code>,
                              " to upload a sample app to the STRATO blockchain",
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "Run ",
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "strato init",
                              },
                              "ref": null,
                              "rendered": "strato init",
                              "type": "code",
                            },
                            " to upload a sample app to the STRATO blockchain",
                          ],
                          "type": "li",
                        },
                      ],
                      "type": "ol",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-dialog-footer-actions button-center"
            >
              <div>
                <Blueprint.AnchorButton
                  className="read-docs-btn"
                  href="https://developers.blockapps.net/advanced/launch-dapp/"
                  intent={0}
                  onClick={[Function]}
                  target="_blank"
                  text="Upload an App"
                />
              </div>
            </div>,
            "className": "pt-dialog-footer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                <Blueprint.AnchorButton
                  className="read-docs-btn"
                  href="https://developers.blockapps.net/advanced/launch-dapp/"
                  intent={0}
                  onClick={[Function]}
                  target="_blank"
                  text="Upload an App"
                />
              </div>,
              "className": "pt-dialog-footer-actions button-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Blueprint.AnchorButton
                  className="read-docs-btn"
                  href="https://developers.blockapps.net/advanced/launch-dapp/"
                  intent={0}
                  onClick={[Function]}
                  target="_blank"
                  text="Upload an App"
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "read-docs-btn",
                  "href": "https://developers.blockapps.net/advanced/launch-dapp/",
                  "intent": 0,
                  "onClick": [Function],
                  "target": "_blank",
                  "text": "Upload an App",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`CLI: index render stateless component without values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CLI
    addApp={false}
    closeWalkThroughOverlay={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-dialog-body"
        >
          <div
            className="pt-form-group"
          >
            <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Run 
                    <code>
                      strato init
                    </code>
                     to upload a sample app to the STRATO blockchain
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>,
        <div
          className="pt-dialog-footer"
        >
          <div
            className="pt-dialog-footer-actions button-center"
          >
            <div>
              <Blueprint.AnchorButton
                className="read-docs-btn"
                href="https://developers.blockapps.net/advanced/launch-dapp/"
                intent={0}
                onClick={[Function]}
                target="_blank"
                text="Upload an App"
              />
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-form-group"
          >
            <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Run 
                    <code>
                      strato init
                    </code>
                     to upload a sample app to the STRATO blockchain
                  </li>
                </ol>
              </div>
            </div>
          </div>,
          "className": "pt-dialog-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Run 
                    <code>
                      strato init
                    </code>
                     to upload a sample app to the STRATO blockchain
                  </li>
                </ol>
              </div>
            </div>,
            "className": "pt-form-group",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  Download the STRATO CLI to deploy apps from the command line
                </h4>,
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Run 
                      <code>
                        strato init
                      </code>
                       to upload a sample app to the STRATO blockchain
                    </li>
                  </ol>
                </div>,
              ],
              "className": "pt-form-content cli-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Download the STRATO CLI to deploy apps from the command line",
                },
                "ref": null,
                "rendered": "Download the STRATO CLI to deploy apps from the command line",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <p>
                      Pre-requisites:
                      <br />
                      Node JS (Version 6 and up)
                    </p>,
                    <ol>
                      <li>
                        Once you have Node JS installed, run 
                        <code>
                          npm install -g strato-cli
                        </code>
                      </li>
                      <li>
                        Run 
                        <code>
                          strato init
                        </code>
                         to upload a sample app to the STRATO blockchain
                      </li>
                    </ol>,
                  ],
                  "className": "cli-content",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Pre-requisites:",
                        <br />,
                        "Node JS (Version 6 and up)",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "Pre-requisites:",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {},
                        "ref": null,
                        "rendered": null,
                        "type": "br",
                      },
                      "Node JS (Version 6 and up)",
                    ],
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <li>
                          Once you have Node JS installed, run 
                          <code>
                            npm install -g strato-cli
                          </code>
                        </li>,
                        <li>
                          Run 
                          <code>
                            strato init
                          </code>
                           to upload a sample app to the STRATO blockchain
                        </li>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "Once you have Node JS installed, run ",
                            <code>
                              npm install -g strato-cli
                            </code>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "Once you have Node JS installed, run ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "npm install -g strato-cli",
                            },
                            "ref": null,
                            "rendered": "npm install -g strato-cli",
                            "type": "code",
                          },
                        ],
                        "type": "li",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "Run ",
                            <code>
                              strato init
                            </code>,
                            " to upload a sample app to the STRATO blockchain",
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "Run ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "strato init",
                            },
                            "ref": null,
                            "rendered": "strato init",
                            "type": "code",
                          },
                          " to upload a sample app to the STRATO blockchain",
                        ],
                        "type": "li",
                      },
                    ],
                    "type": "ol",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-dialog-footer-actions button-center"
          >
            <div>
              <Blueprint.AnchorButton
                className="read-docs-btn"
                href="https://developers.blockapps.net/advanced/launch-dapp/"
                intent={0}
                onClick={[Function]}
                target="_blank"
                text="Upload an App"
              />
            </div>
          </div>,
          "className": "pt-dialog-footer",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <Blueprint.AnchorButton
                className="read-docs-btn"
                href="https://developers.blockapps.net/advanced/launch-dapp/"
                intent={0}
                onClick={[Function]}
                target="_blank"
                text="Upload an App"
              />
            </div>,
            "className": "pt-dialog-footer-actions button-center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Blueprint.AnchorButton
                className="read-docs-btn"
                href="https://developers.blockapps.net/advanced/launch-dapp/"
                intent={0}
                onClick={[Function]}
                target="_blank"
                text="Upload an App"
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "className": "read-docs-btn",
                "href": "https://developers.blockapps.net/advanced/launch-dapp/",
                "intent": 0,
                "onClick": [Function],
                "target": "_blank",
                "text": "Upload an App",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-dialog-body"
          >
            <div
              className="pt-form-group"
            >
              <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Run 
                      <code>
                        strato init
                      </code>
                       to upload a sample app to the STRATO blockchain
                    </li>
                  </ol>
                </div>
              </div>
            </div>
          </div>,
          <div
            className="pt-dialog-footer"
          >
            <div
              className="pt-dialog-footer-actions button-center"
            >
              <div>
                <Blueprint.AnchorButton
                  className="read-docs-btn"
                  href="https://developers.blockapps.net/advanced/launch-dapp/"
                  intent={0}
                  onClick={[Function]}
                  target="_blank"
                  text="Upload an App"
                />
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-group"
            >
              <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Run 
                      <code>
                        strato init
                      </code>
                       to upload a sample app to the STRATO blockchain
                    </li>
                  </ol>
                </div>
              </div>
            </div>,
            "className": "pt-dialog-body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Run 
                      <code>
                        strato init
                      </code>
                       to upload a sample app to the STRATO blockchain
                    </li>
                  </ol>
                </div>
              </div>,
              "className": "pt-form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Download the STRATO CLI to deploy apps from the command line
                  </h4>,
                  <div
                    className="cli-content"
                  >
                    <p>
                      Pre-requisites:
                      <br />
                      Node JS (Version 6 and up)
                    </p>
                    <ol>
                      <li>
                        Once you have Node JS installed, run 
                        <code>
                          npm install -g strato-cli
                        </code>
                      </li>
                      <li>
                        Run 
                        <code>
                          strato init
                        </code>
                         to upload a sample app to the STRATO blockchain
                      </li>
                    </ol>
                  </div>,
                ],
                "className": "pt-form-content cli-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Download the STRATO CLI to deploy apps from the command line",
                  },
                  "ref": null,
                  "rendered": "Download the STRATO CLI to deploy apps from the command line",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <p>
                        Pre-requisites:
                        <br />
                        Node JS (Version 6 and up)
                      </p>,
                      <ol>
                        <li>
                          Once you have Node JS installed, run 
                          <code>
                            npm install -g strato-cli
                          </code>
                        </li>
                        <li>
                          Run 
                          <code>
                            strato init
                          </code>
                           to upload a sample app to the STRATO blockchain
                        </li>
                      </ol>,
                    ],
                    "className": "cli-content",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "Pre-requisites:",
                          <br />,
                          "Node JS (Version 6 and up)",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "Pre-requisites:",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {},
                          "ref": null,
                          "rendered": null,
                          "type": "br",
                        },
                        "Node JS (Version 6 and up)",
                      ],
                      "type": "p",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <li>
                            Once you have Node JS installed, run 
                            <code>
                              npm install -g strato-cli
                            </code>
                          </li>,
                          <li>
                            Run 
                            <code>
                              strato init
                            </code>
                             to upload a sample app to the STRATO blockchain
                          </li>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Once you have Node JS installed, run ",
                              <code>
                                npm install -g strato-cli
                              </code>,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "Once you have Node JS installed, run ",
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "npm install -g strato-cli",
                              },
                              "ref": null,
                              "rendered": "npm install -g strato-cli",
                              "type": "code",
                            },
                          ],
                          "type": "li",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Run ",
                              <code>
                                strato init
                              </code>,
                              " to upload a sample app to the STRATO blockchain",
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "Run ",
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "strato init",
                              },
                              "ref": null,
                              "rendered": "strato init",
                              "type": "code",
                            },
                            " to upload a sample app to the STRATO blockchain",
                          ],
                          "type": "li",
                        },
                      ],
                      "type": "ol",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-dialog-footer-actions button-center"
            >
              <div>
                <Blueprint.AnchorButton
                  className="read-docs-btn"
                  href="https://developers.blockapps.net/advanced/launch-dapp/"
                  intent={0}
                  onClick={[Function]}
                  target="_blank"
                  text="Upload an App"
                />
              </div>
            </div>,
            "className": "pt-dialog-footer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                <Blueprint.AnchorButton
                  className="read-docs-btn"
                  href="https://developers.blockapps.net/advanced/launch-dapp/"
                  intent={0}
                  onClick={[Function]}
                  target="_blank"
                  text="Upload an App"
                />
              </div>,
              "className": "pt-dialog-footer-actions button-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Blueprint.AnchorButton
                  className="read-docs-btn"
                  href="https://developers.blockapps.net/advanced/launch-dapp/"
                  intent={0}
                  onClick={[Function]}
                  target="_blank"
                  text="Upload an App"
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "read-docs-btn",
                  "href": "https://developers.blockapps.net/advanced/launch-dapp/",
                  "intent": 0,
                  "onClick": [Function],
                  "target": "_blank",
                  "text": "Upload an App",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
